--- a/class-app/src/app/pizza-app/pizza-app.component.html
+++ b/class-app/src/app/pizza-app/pizza-app.component.html
@@ -1,18 +1,17 @@
+<!-- pizza-app.component.html -->
 <div class="pizza-app">
   <div class="pizza-viewer">
     <div class="pizza">
       <div class="pizza__board"></div>
       <div class="pizza__base"></div>
-      <!-- <div class="pizza-toppings"></div> -->
     </div>
   </div>
 
-  <!-- Pizza Form -->
-  <!-- Pizza Summary -->
   <div class="pizza__summary">
     <p>Small {{ prices.small.size | size }}</p>
-    <p>Medium {{ prices.meduim.size | size }}</p>
+    <p>Medium {{ prices.medium.size | size }}</p>
     <p>Large {{ prices.large.size | size }}</p>
     <p>X-Large {{ prices["x-large"].size | size }}</p>
   </div>
+
 </div>
