--- a/class-app/src/app/shared/nav-bar.component.html
+++ b/class-app/src/app/shared/nav-bar.component.html
@@ -1,3 +1,4 @@
+<!-- nav-bar.component.html -->
 <nav class="nav-bar">
   <a routerLink="/" routerLinkActive="active">Home</a>
   <a routerLink="pizzas" routerLinkActive="active">Creator</a>
